[gd_scene load_steps=16 format=2]

[ext_resource path="res://img/boardgamewithhall.png" type="Texture" id=1]
[ext_resource path="res://dice/dice1.png" type="Texture" id=2]
[ext_resource path="res://dice/dice5.png" type="Texture" id=3]
[ext_resource path="res://dice/dice2.png" type="Texture" id=4]
[ext_resource path="res://dice/dice3.png" type="Texture" id=5]
[ext_resource path="res://dice/dice6.png" type="Texture" id=6]
[ext_resource path="res://dice/dice4.png" type="Texture" id=7]
[ext_resource path="res://Untitled-1.png" type="Texture" id=8]
[ext_resource path="res://img/background.png" type="Texture" id=9]
[ext_resource path="res://Untitled-2.png" type="Texture" id=10]
[ext_resource path="res://Board.gd" type="Script" id=11]
[ext_resource path="res://audio/dice.wav" type="AudioStream" id=12]
[ext_resource path="res://img/boardgamewithall.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 32.753, 844.904, 0, 0, 0, 0, 97.0089, 841.754, 0, 0, 0, 0, 149.926, 844.904, 0, 0, 0, 0, 203.331, 837.55, 0, 0, 0, 0, 269.926, 836.361, 0, 0, 0, 0, 324.63, 832.793, 0, 0, 0, 0, 385.28, 841.118, 0, 0, 0, 0, 453.064, 844.685, 0, 0, 0, 0, 506.579, 844.685, 0, 0, 0, 0, 564.85, 844.685, 0, 0, 0, 0, 563.96, 757.969, 0, 0, 0, 0, 502.224, 757.339, 0, 0, 0, 0, 443.487, 759.229, 0, 0, 0, 0, 386.791, 760.489, 0, 0, 0, 0, 328.198, 762.63, 0, 0, 0, 0, 258.034, 763.819, 0, 0, 0, 0, 210.466, 760.252, 0, 0, 0, 0, 147.438, 763.819, 0, 0, 0, 0, 74.8965, 763.819, 0, 0, 0, 0, 34.4634, 763.819, 0, 0, 0, 0, 30.8958, 684.143, 0, 0, 0, 0, 89.1669, 684.143, 0, 0, 0, 0, 153.204, 676.549, 0, 0, 0, 0, 210.466, 680.575, 0, 0, 0, 0, 275.872, 680.575, 0, 0, 0, 0, 323.441, 680.575, 0, 0, 0, 0, 387.658, 681.764, 0, 0, 0, 0, 450.686, 680.575, 0, 0, 0, 0, 510.146, 679.386, 0, 0, 0, 0, 563.661, 680.575, 0, 0, 0, 0, 565.728, 574.112, 0, 0, 0, 0, 500.601, 577.888, 0, 0, 0, 0, 443.025, 575.056, 0, 0, 0, 0, 387.336, 577.888, 0, 0, 0, 0, 327.872, 581.663, 0, 0, 0, 0, 267.239, 578.55, 0, 0, 0, 0, 208, 578.831, 0, 0, 0, 0, 151.368, 577.888, 0, 0, 0, 0, 96.3022, 591.384, 0, 0, 0, 0, 29.7066, 581.871, 0, 0, 0, 0, 27.3282, 496.248, 0, 0, 0, 0, 92.7346, 496.248, 0, 0, 0, 0, 155.423, 482.33, 0, 0, 0, 0, 209.484, 481.663, 0, 0, 0, 0, 270.219, 478.993, 0, 0, 0, 0, 330.955, 478.993, 0, 0, 0, 0, 383.013, 476.991, 0, 0, 0, 0, 439.744, 478.993, 0, 0, 0, 0, 507.768, 495.059, 0, 0, 0, 0, 567.228, 497.437, 0, 0, 0, 0, 563.017, 387.675, 0, 0, 0, 0, 503.011, 404.679, 0, 0, 0, 0, 444.527, 394.802, 0, 0, 0, 0, 393.604, 405.868, 0, 0, 0, 0, 327.82, 394.802, 0, 0, 0, 0, 273.494, 401.111, 0, 0, 0, 0, 214.332, 393.25, 0, 0, 0, 0, 153.255, 388.005, 0, 0, 0, 0, 98.5106, 387.061, 0, 0, 0, 0, 33.2742, 392.787, 0, 0, 0, 0, 31.1504, 301.258, 0, 0, 0, 0, 96.3022, 304.786, 0, 0, 0, 0, 151.422, 294.13, 0, 0, 0, 0, 212.844, 302.407, 0, 0, 0, 0, 266.348, 303.93, 0, 0, 0, 0, 328.711, 294.13, 0, 0, 0, 0, 383.946, 296.803, 0, 0, 0, 0, 443.551, 304.786, 0, 0, 0, 0, 518.471, 305.975, 0, 0, 0, 0, 570.144, 296.803, 0, 0, 0, 0, 561.235, 201.477, 0, 0, 0, 0, 495.309, 203.259, 0, 0, 0, 0, 444.527, 201.477, 0, 0, 0, 0, 388.847, 212.027, 0, 0, 0, 0, 329.387, 212.027, 0, 0, 0, 0, 268.737, 213.217, 0, 0, 0, 0, 212.844, 213.217, 0, 0, 0, 0, 153.855, 208.041, 0, 0, 0, 0, 95.2691, 209.301, 0, 0, 0, 0, 32.085, 208.46, 0, 0, 0, 0, 28.1019, 130.221, 0, 0, 0, 0, 89.4874, 129.38, 0, 0, 0, 0, 152.555, 126.017, 0, 0, 0, 0, 215.622, 128.539, 0, 0, 0, 0, 265.235, 124.335, 0, 0, 0, 0, 324.938, 126.017, 0, 0, 0, 0, 382.531, 121.737, 0, 0, 0, 0, 444.346, 126.017, 0, 0, 0, 0, 498.163, 121.812, 0, 0, 0, 0, 564.594, 121.812, 0, 0, 0, 0, 567.221, 25.367, 0, 0, 0, 0, 501.814, 24.6996, 0, 0, 0, 0, 443.749, 21.3624, 0, 0, 0, 0, 383.681, 22.0299, 0, 0, 0, 0, 327.618, 28.7041, 0, 0, 0, 0, 268.885, 23.3647, 0, 0, 0, 0, 212.821, 22.0299, 0, 0, 0, 0, 156.091, 22.0299, 0, 0, 0, 0, 92.6857, 23.3647, 0, 0, 0, 0, 36.4958, 33.0971, 0, 0, 0, 0, 28.4777, 31.3153, 0, 0, 0, 0, 28.4777, 31.3153, 0, 0, 0, 0, 32.0413, 37.5516, 0, 0, 0, 0, 25.805, 39.3334, 0, 0, 0, 0, 25.805, 41.1152, 0, 0, 0, 0, 29.3686, 42.897 )
}

[node name="Board" type="Node2D"]
script = ExtResource( 11 )

[node name="Label" type="Label" parent="."]
margin_left = 149.0
margin_top = 929.0
margin_right = 247.0
margin_bottom = 994.0
text = "PLAYER 1
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceFaces" type="AnimatedSprite" parent="."]
position = Vector2( 70.8709, 963.448 )
scale = Vector2( 0.191222, 0.181546 )
frames = SubResource( 1 )

[node name="Button" type="Button" parent="DiceFaces"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -250.698
margin_top = -765.895
margin_right = 255.302
margin_bottom = -242.895
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="Red" type="PathFollow2D" parent="Path2D"]
position = Vector2( 32.753, 844.904 )
rotation = -0.0489724

[node name="Sprite" type="Sprite" parent="Path2D/Red"]
position = Vector2( 247.906, 86.1614 )
scale = Vector2( 0.409107, 0.33976 )
texture = ExtResource( 8 )

[node name="Blue" type="PathFollow2D" parent="Path2D"]
position = Vector2( 32.753, 844.904 )
rotation = -0.0489724

[node name="Sprite" type="Sprite" parent="Path2D/Blue"]
position = Vector2( 248.404, 127.755 )
rotation = -0.0196185
scale = Vector2( 0.435549, 0.347805 )
texture = ExtResource( 10 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 301.296, 504.506 )
scale = Vector2( 0.238236, 0.244125 )
z_index = -6
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="boardgamewithhall" type="Sprite" parent="."]
position = Vector2( 1101.53, 482.019 )
scale = Vector2( 0.992917, 1.04142 )
z_index = -5
texture = ExtResource( 1 )

[node name="boardgamewithall" type="Sprite" parent="boardgamewithhall"]
position = Vector2( -809.706, -35.1353 )
scale = Vector2( 0.232209, 0.227022 )
texture = ExtResource( 13 )

[node name="Quit" type="Button" parent="."]
margin_left = 493.225
margin_top = 919.735
margin_right = 584.225
margin_bottom = 959.735
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
margin_left = 494.0
margin_top = 971.0
margin_right = 586.0
margin_bottom = 1011.0
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="animation_finished" from="DiceFaces" to="." method="_on_DiceFaces_animation_finished"]
[connection signal="pressed" from="DiceFaces/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
